--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "animate-components": "^1.4.8",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
