--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "react": "^17.0.1",
+    "react-animated-text": "^0.1.4",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
